--- a/index.html
+++ b/index.html
@@ -14,31 +14,19 @@
             Fernanda Tyrola
             <div class="profession">Communication and Media student</div>
         </div>
-        
-
     </div>
     <div class="navbar">
         <ul>
-            <li>
-                <a class="active" href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="experience.html">Experience</a>
-            </li>
-            <li>
-                <a href="education.html">Education</a>
-            </li>
-            <li>
-                <a href="skills.html">Skills</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="content">
         <div class="topic">
-            <h1>A little bit about Me</h1>
+            <h1>A Little Bit About Me</h1>
             <p>
                 Fernanda is a Communication and Media student who dreams of working in the area. 
                 Graduated in Business Administration and Human Resources, 
@@ -50,12 +38,11 @@
     <div class="content">
         <div class="topic">
             <h1>My Projects</h1>
-            <h3>MashUp Video</h3>
+            <h3>Take your backpack away</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/IRnHAZpX5O4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <p>Taking existing sources of audio and video and re-combining 
-                them in new ways is called the “Mashup”. The video contain 
-                a range of shots that engage an audience interested in your theme.
-            </p>
+            <a href="http://nandarita.wixsite.com/takeyourbackpackaway">
+                <p>Click here access the blog and know more about this campaign.</p>
+            </a>
             <h3>Movie Review</h3>
             <embed src="pdf/moviereview.pdf" width="500" height="375">
             <p>
