--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
             <li><a href="experience.html">Experience</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="skills.html">Skills</a></li>
+            <li><a href="resume.html">Resume</a></li>
             <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
     </div>
